@@ -3,7 +3,7 @@ is_continue == false
 Pixel size (A) == 1
 Diameter background circle (pix):  == $$mask_diam_px
 Stddev for black dust removal:  == -1
-Input coordinates:  == Schedules/preprocess/cryolopicker/coords_suffix_cryolo.star
+Input coordinates:  == Schedules/preprocess-cryolo/cryolopicker/coords_suffix_cryolo.star
 Cut helical tubes into segments? == Yes
 Coordinates are start-end only? == Yes
 Extract helical segments? == No
@@ -31,5 +31,5 @@ Re-center on X-coordinate (in pix):  == 0
 Re-center on Y-coordinate (in pix):  == 0
 Re-center on Z-coordinate (in pix):  == 0
 Re-scaled size (pixels):  == $$box_size_bin
-micrograph STAR file:  == Schedules/preprocess/ctffind/micrographs_ctf.star
+micrograph STAR file:  == Schedules/preprocess-cryolo/ctffind/micrographs_ctf.star
 Stddev for white dust removal:  == -1
